# delaunator-cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: bench.cmake  common.cmake  compiler_options.cmake  delaunator_config.hpp.in  directories.cmake  gtest.cmake  options.cmake  test.cmake  unix_compiler_options.cmake  win32_compiler_options.cmake
examples/: basic.cpp
gtest/: CMakeLists.txt
gtest/cmake/: internal_utils.cmake
include/: delaunator.cpp  delaunator.hpp  delaunator_config.hpp
test/: CMakeLists.txt  delaunator.test.cpp  delaunator_test_main.hpp  issue-2.cpp  issue-8.cpp
